# jaxfne

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  EXECUTION_RECEIPT.txt  FRESH_WORKER_BEHAVIOR_CHECK.md  FRESH_WORKER_BEHAVIOR_CHECK_REPORT.md  GRAMMAR_AUDIT_FINAL.md  JAX_NATIVE_HARDENING_VALIDATION.md  LICENSE  MAIN_ALIGNMENT_FINAL_RECEIPT.md  MERGE_GATE_A_C_ONLY_FINAL_RECEIPT.md  README.md  VALIDATION_FINAL.md  WORKER_3_DEPLOYMENT_READY.md  mkdocs.yml  pyproject.toml  receipt_final_polish.json  requirements-v030-tutorials.txt  suite_no1_public_manifest.json
benchmarks/: bench_vectorized_paths.py
docs/: AUDIT_v0.0.18_PREMERGE.md  COLAB_SMOKE_V010.md  DOCTRINE.md  RELEASE_CHECKLIST.md  _theme_override.css  calibration.md  changelog.md  ci_policy.md  citation.md  colab.md  computation_basis.md  conservation_proxy_diagnostics.md  contributing.md  faq.md  index.md  install.md  interactive_visualizations.md  jaxley_interop.md  manuscript_alignment.md  mathematical_glossary_flow.md  output_bundles.md  packaging.md  performance_baseline.md  plotly_visualization.md  poisson_admissibility.md  probe_operators.md  quickstart.md  scope_and_limitations.md  source_field_equations.md  tensor_field_workflows.md  tensor_network_ancestry.md  tutorial_figures.md  tutorial_template_v030.md  v030_tutorial_scenario_plan.md  v03_bridge.md
examples/: 00_generalized_izhikevich_3d_smoke.py  00_minimal_column.py  01_generalized_readout_smoke.py  01_source_field_manifest.py  02_generalized_vis_smoke.py  02_omission_scaffold.py  02_spectrolaminar_oddball_scaffold.py  03_jaxley_bridge_smoke.py  03_objective_and_tune_smoke.py  03_single_neuron_multimodal_probe.py  04_blackbox_tuning_loop.py  04_two_neuron_ei_multimodal.py  05_dataset_bridge_manifest.py  05_network_100_ei_multimodal.py  06_edge_list_recurrent_backend.py  07_jaxley_trace_bridge.py  (+7 more)
jaxfne/: core.py  (+15 more)
(+331 files in other folders)
