[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxfne"
version = "0.3.21"
description = "JAX Field Neural Equations: a source-to-field neurophysiology engine for TFNE models."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "H N"}]
dependencies = [
  "jax>=0.4.25",
  "jaxlib>=0.4.25",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
opt = ["optax>=0.2"]
jaxley = ["jaxley"]
viz = ["matplotlib", "plotly"]
io = ["pyyaml", "zarr", "h5py"]
dev = ["pytest", "pytest-xdist", "ruff", "optax>=0.2", "matplotlib", "plotly"]
all = ["jaxfne[opt,jaxley,viz,io,dev]"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
only-packages = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.venv",
  "/.pytest_cache",
  "/docs/tutorials_v030",
  "/internal_docs",
  "/.claude",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (notebook execution, full simulation runs)",
]
